--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         
         <main>
             <div class="first"></div>
-            <div class="second"></div>
+            <div class="second">
+                <div class="section-main"></div>
+                <div class="side section"></div>
+                <div class="center section"></div>
+                <div class="side section"></div>
+            </div>
         </main>
         
         <footer>
